app.yaml
apiVersion: v1
kind: Service
metadata:
    name: telegram-proxy
spec:
    type: ClusterIP
    ports:
        - port: 8080
          targetPort: 8080
    selector:
        app: telegram-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: telegram-proxy-deployment
    labels:
        app: telegram-proxy
spec:
    replicas: 1
    selector:
        matchLabels:
            app: telegram-proxy
    template:
        metadata:
            labels:
                app: telegram-proxy
        spec:
            containers:
                - name: telegram-proxy
                  image: polywoo/telegram-proxy:v1
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8080
                  resources:
                      requests:
                          cpu: 50m
                          memory: 20Mi
                      limits:
                          cpu: 100m
                          memory: 100Mi
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: telegram-proxy-ingress
    annotations:
        kubernetes.io/ingress.class: 'nginx'
        cert-manager.io/cluster-issuer: 'letsencrypt-default'
spec:
    tls:
        - hosts:
              - px.polywoo.com
          secretName: telegram-proxy-tls
    rules:
        - host: px.polywoo.com
          http:
              paths:
                  - backend:
                        serviceName: telegram-proxy
                        servicePort: 8080
